# -Parallel-Computing-Lab-3-Finding-Max-Value

./: .gitignore  CMakeLists.txt  CONCLUSION.md  README.md  compileAndTest  data.xlsx  maxgpu.cu
